--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         printWindow.document.write("</body></html>");
         printWindow.print();
 
-        printWindow.close();
+        // printWindow.close();
       });
 
       function addMed() {
