--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
         <tr>
           <td>Age:</td>
           <td>
-            <input class="small-Width" type="number" id="ageY" /> Yr
-            <input class="small-Width" type="number" id="ageM" /> Months
+            <input style="width: 50px" type="number" id="ageY" /> Yr
+            <input style="width: 50px" type="number" id="ageM" /> Months
           </td>
         </tr>
         <tr>
@@ -191,19 +191,19 @@
         </tr>
         <tr>
           <td>Weight:</td>
-          <td><input class="small-Width" type="number" id="weight" /> Kgs</td>
+          <td><input style="width: 50px" type="number" id="weight" /> Kgs</td>
         </tr>
         <tr>
           <td>BP:</td>
           <td>
-            <input class="small-Width" type="number" id="bp1" /> <b>By</b>
-            <input class="small-Width" type="number" id="bp2" /> mmHg
+            <input style="width: 50px" type="number" id="bp1" /> <b>By</b>
+            <input style="width: 50px" type="number" id="bp2" /> mmHg
           </td>
         </tr>
         <tr>
           <td>Glucose:</td>
           <td>
-            <input class="small-Width" type="number" id="glucose" /> mg/dL
+            <input style="width: 50px" type="number" id="glucose" /> mg/dL
           </td>
         </tr>
       </table>
