--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             "</td>" +
             "<td>" +
             $("#duration").val() +
-            "</td>" +
+            " Days</td>" +
             "</tr>"
         );
         $("#dialog").dialog("close");
