--- a/index.html
+++ b/index.html
@@ -271,7 +271,8 @@
         </span>
       </div>
       <br />
-      <hr style="height: 3px; background-color: rgb(151 187 111)" />
+      <!-- <hr style="height: 3px; background-color: rgb(151 187 111)" /> -->
+      <div style="background-image: url('hr.png'); height: 5px;"></div><br />
       <b>Consultation Date:</b>
       <input style="border: none" type="text" id="datepicker2" /> <br /><br />
       <div style="background: rgb(234 234 234)">
