--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
             <option value="Inj">Injection</option>
             <option value="Drp">Drop</option>
           </select>
+          <hr />
           <label for="name">Name:</label>
           <input
             type="text"
@@ -447,7 +448,7 @@
         </tr>
         <tr>
           <td><b>Follow Up:</b></td>
-          <td><input type="text" id="datepicker" style="width: 265px" /></td>
+          <td><input type="text" id="datepicker" /></td>
         </tr>
       </table>
       <br /><br />
