--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       </div>
       <br />
       <hr />
-      <b>Clinical Description:</b>
+      <!-- <b>Clinical Description:</b> -->
       <input
         type="button"
         value="Add Clinical Description"
