--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </div>
       <br />
       <hr /><hr />
-      <div style="background-image: url('hr.png'); height: 5px;"></div><br />
+      <!-- <div style="background-image: url('hr.png'); height: 5px;"></div><br /> -->
       <b>Consultation Date:</b>
       <input style="border: none" type="text" id="datepicker2" /> <br /><br />
       <div style="background: rgb(234 234 234)">
